--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>La premiere page des Mecen</title>
 </head>
 <body>
-    <header>Menu</header>
+    <header>
+        <h1>Mon site web</h1>
+        <nav>
+            <a href="Acceuil"></a>
+            <a href="A propos"></a>
+            <a href="Services"></a>
+            <a href="Contact"></a>
+        </nav>
+    </header>
     <main>Section principale</main>
     <footer>Bas de page</footer>
 </body>
