Ajout dans main de la section banner

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <a href="Contact"></a>
         </nav>
     </header>
-    <main>Section principale</main>
+    <main>
+        <section id="banner"> 
+            <h1>Mon premier site web</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore autem maxime debitis dicta et odio corrupti sapiente! Recusandae eos, velit laborum numquam dolorum vel saepe architecto, facere harum animi natus!</p>
+        </section>
+    </main>
     <footer>Bas de page</footer>
 </body>
 </html>
