Ajout dans main de la section features

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             <h1>Mon premier site web</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore autem maxime debitis dicta et odio corrupti sapiente! Recusandae eos, velit laborum numquam dolorum vel saepe architecto, facere harum animi natus!</p>
         </section>
+        <section id="features">
+            <div> <img src="html.png"/>
+                <h3>HTML5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fuga veritatis omnis officia fugit quisquam soluta velit ut numquam. Distinctio, iure amet. Modi eligendi eaque odio magni fugit, deleniti tenetur.</p>
+            </div>
+            <div> <img src="css.png"/>
+                <h3>CSS3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptates quis amet dicta nesciunt nam laboriosam laborum, ullam tenetur? Minus aperiam tempore minima perferendis quisquam nostrum tenetur laborum molestias eius.</p>
+            </div>
+            <div> <img src="js.png"/>
+                <h3>JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque, laboriosam, pariatur repellat nostrum provident ea sapiente adipisci aliquam distinctio nihil porro facere officiis eligendi amet reprehenderit, ad repellendus nobis.</p>
+        </section>
     </main>
     <footer>Bas de page</footer>
 </body>
