Ajout dans main de la section newsletter

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                 <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque, laboriosam, pariatur repellat nostrum provident ea sapiente adipisci aliquam distinctio nihil porro facere officiis eligendi amet reprehenderit, ad repellendus nobis.</p>
         </section>
+        <section id="newsletter">
+            <h1>Inscrivez-vous à la newsletter</h1>
+            <form>
+                <input type="email" placeholder="Entrer Email..."/>
+                <button type="submit"> Minscrire</button>
+            </form>
+        </section>
     </main>
     <footer>Bas de page</footer>
 </body>
