--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
         <h1>Mon site web</h1>
         <nav>
-            <a href="Acceuil"></a>
-            <a href="A propos"></a>
-            <a href="Services"></a>
-            <a href="Contact"></a>
+            <a> Accueil</a>
+            <a> A propos</a>
+            <a> Services</a>
+            <a> Contact</a>
         </nav>
     </header>
     <main>
