--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             </form>
         </section>
     </main>
-    <footer>Bas de page</footer>
+    <footer>
+        <p>Un texte personnalisé</p>
+    </footer>
 </body>
 </html>
