--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Mon site web</h1>
+        <h1><span class="couleur">Mon</span > Site Web</h1>
         <nav>
             <a> Accueil</a>
             <a> A propos</a>
