--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>La premiere page des Mecen</title>
 </head>
 <body>
-    <header>
+    <header></header>
         <h1><span class="couleur">Mon</span > Site Web</h1>
         <nav>
             <a> Accueil</a>
